# graphics_lab

./: .gitignore  CMakeLists.txt  example_uvmesh_charts00.tga  example_uvmesh_tris00.tga
assets/: couch.glb
assets/shaders/: basic.fs  basic.vs  basic_instanced.vs  cascaded_shadow_map.fs  cascaded_shadow_map.vs  color_shader.fs  color_shader.vs  depth_only.vs  environment.fs  environment.vs  intersection.fs  lightray_shader.fs  lightray_shader.vs  spherical_harmonics.cs  spherical_harmonics.fs  triangle_visibility.fs  triangle_visibility.vs  volumetric_fog.fs  volumetric_fog.vs
editor_scripts/: local.lua
src/: atlas.cpp  atlas.h  helper_math.cpp  helper_math.h  main.cpp  mesh_decimation.cpp  mesh_decimation.h  raytracer.cpp  raytracer.h  shaders.cpp  shaders.h  util.cpp  util.h
